--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+logging.level.org.springframework= debug
+server.port= 8081
+spring.application.name= myApp
+spring.jackson.serialization.write-dates-as-timestamps=false
