Swagger api adding
UI:- /swagger-ui.html
json output :- /v2/api-docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework= debug
+logging.level.org.springframework= error
 server.port= 8081
 spring.application.name= myApp
 spring.jackson.serialization.write-dates-as-timestamps=false
