Adding basic security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ logging.level.org.springframework= error
 server.port= 8081
 spring.application.name= myApp
 spring.jackson.serialization.write-dates-as-timestamps=false
+spring.security.user.name=prem
+spring.security.user.password=prem
